# optimized-hnsw-filtering

./: CMakeLists.txt  README.md  project_structure.txt
benchmarks/: filter_benchmarks.cpp  visualize_results.py
examples/: hnsw_bitset_example.cpp  hnsw_example.cpp  hnsw_roaring_example.cpp
src/: main.cpp
src/core/: bitset_filter.cpp  bitset_filter.h  filter_interface.h  naive_filter.cpp  naive_filter.h  roaring_filter.cpp  roaring_filter.h
tests/: test_bitset_filter.cpp  test_naive_filter.cpp  test_roaring_filter.cpp
